--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,29 +1,89 @@
-<h2>Sign up</h2>
+<h2>ユーザー登録</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_with model: @user, url: user_registration_path, local: true do |f| %>
   <%= render "users/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <div>
+      <label>ニックネーム</label>
+      <span>必須</span>
+    </div>
+    <%= f.text_area :nickname, placeholder:"例）Kagu太 " %>
+  </div>
+  <div class="field">
+    <div>
+      <label>メールアドレス</label>
+      <span>必須</span>
+    </div>
+    <%= f.email_field :email, placeholder:"PC・携帯どちらでも可", autofocus: true %>
+  </div>
+  <div class="field">
+    <div>
+      <label>パスワード</label>
+      <span>必須</span>
+    </div>
+    <%= f.password_field :password, placeholder:"6文字以上の半角英数字" %>
+    <p>※英字、数字、どちらも必要です</p>
+  </div>
+  <div class="field">
+    <div>
+      <label>パスワード(確認用)</label>
+      <span>必須</span>
+    </div>
+    <%= f.password_field :password_confirmation, placeholder:"同じパスワードを入力" %>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+  <h3>ユーザー情報登録</h3>
+
+  <div>
+    <div>
+      <label>お名前(全角)</label>
+      <span>必須</span>
+    </div>
+    <div class='input-name-wrap'>
+      <%= f.text_area :first_name, placeholder:"例) 佐藤" %>
+      <%= f.text_area :last_name, placeholder:"例) かぐ太" %>
+    </div>
+  </div>
+  <div>
+    <div>
+      <label>お名前カナ(全角)</label>
+      <span>必須</span>
+    </div>
+    <div>
+      <%= f.text_area :first_name_kana, placeholder:"例) サトウ" %>
+      <%= f.text_area :last_name_kana, placeholder:"例) カグタ" %>
+    </div>
+  </div>
+  <div>
+    <div>
+      <label>郵便番号</label>
+      <span>必須</span>
+    </div>
+    <div>
+      <%= f.text_field :postal_code, placeholder:"例) 123-4567" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <div>
+    <div>
+      <label>生年月日</label>
+      <span>必須</span>
+    </div>
+    <div>
+      <%= raw sprintf(
+                  f.date_select(
+                    :birthday,
+                    use_month_numbers: true,
+                    prompt:'--',
+                    start_year: 1930,
+                    end_year: (Time.now.year - 10),
+                    date_separator: '%s'),
+                  "年", "月") + "日" %>
+    </div>
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "登録する" %>
   </div>
 <% end %>
-
-<%= render "users/shared/links" %>
