--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <h2>ユーザー登録</h2>
 
 <%= form_with model: @user, url: user_registration_path, local: true do |f| %>
-  <%= render "users/shared/error_messages", resource: resource %>
+  <%= render "shared/error_messages", model: f.object %>
 
   <div class="field">
     <div>
