--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -41,8 +41,8 @@
       <span>必須</span>
     </div>
     <div class='input-name-wrap'>
-      <%= f.text_area :first_name, placeholder:"例) 佐藤" %>
-      <%= f.text_area :last_name, placeholder:"例) かぐ太" %>
+      <%= f.text_area :last_name, placeholder:"例) 佐藤" %>
+      <%= f.text_area :first_name, placeholder:"例) かぐ太" %>
     </div>
   </div>
   <div>
@@ -51,8 +51,8 @@
       <span>必須</span>
     </div>
     <div>
-      <%= f.text_area :first_name_kana, placeholder:"例) サトウ" %>
-      <%= f.text_area :last_name_kana, placeholder:"例) カグタ" %>
+      <%= f.text_area :last_name_kana, placeholder:"例) サトウ" %>
+      <%= f.text_area :first_name_kana, placeholder:"例) カグタ" %>
     </div>
   </div>
   <div>
