--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -1,1 +1,18 @@
 <%= render "shared/header" %>
+
+<h2>shop一覧</h2>
+<ul>
+  <% if @shops.present? %>
+    <% @shops.each do |shop| %>
+      <li>
+        <%= link_to shop.name, shop_path(shop.id) %>
+      </li>
+    <% end %>
+  <% else %>
+    shopを登録してください
+  <% end %>
+</ul>
+
+<% if owner_signed_in? %>
+  <%= link_to "Shop登録", new_shop_path %>
+<% end %>
