--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -5,7 +5,7 @@
   <% if @shops.present? %>
     <% @shops.each do |shop| %>
       <li>
-        <%= link_to shop.name, shop_path(shop.id) %>
+        <%= link_to shop.name, shop_items(shop.id) %>
       </li>
     <% end %>
   <% else %>
