商品の一覧表示の実装

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,6 +1,9 @@
-<h1>商品一覧</h1>
+<h1><%= @shop.name %></h1>
+<h2>商品一覧</h2>
 
-<%= link_to '出品する', new_shop_item_path %>
+<% if current_owner == @shop.owner %>
+  <%= link_to '出品する', new_shop_item_path %>
+<% end%>
 
 <div>
 <% if @items.present? %>
@@ -10,7 +13,9 @@
     <%= item.name %>
     </div>
   <% end %>
-<% else %>
+<% elsif current_owner == @shop.owner %>
   商品を出品してください
+<% else %>
+  商品はありません
 <% end %>
 </div>
