--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -8,10 +8,12 @@
 <div>
 <% if @items.present? %>
   <% @items.each do |item| %>
-    <%= image_tag item.image.variant(resize: '400x400') %>
-    <div>
-    <%= item.name %>
-    </div>
+    <%= link_to  shop_item_path(@shop.id, item.id), method: :get do %>
+      <%= image_tag item.image.variant(resize: '400x400') %>
+      <div>
+      <%= item.name %>
+      </div>
+    <% end %>
   <% end %>
 <% elsif current_owner == @shop.owner %>
   商品を出品してください
