--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -13,7 +13,7 @@
 </div>
 <div>
   <% if user_signed_in? %>
-    <%= link_to '購入', "#" %>
+    <%= link_to '購入', item_orders_path(@item.id) %>
   <% end %>
 <div>
 カテゴリー：<%= @item.category.category_name.name %>
