--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,3 +1,7 @@
+<%= render "shared/header" %>
+
+<%= render "shared/search" %>
+
 <h1><%= @shop.name %></h1>
 <h2>商品一覧</h2>
 
@@ -8,7 +12,7 @@
 <div>
 <% if @items.present? %>
   <% @items.each do |item| %>
-    <%= link_to  shop_item_path(@shop.id, item.id), method: :get do %>
+    <%= link_to shop_item_path(@shop.id, item.id), method: :get do %>
       <%= image_tag item.image.variant(resize: '400x400') %>
       <div>
       <%= item.name %>
