--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -1,5 +1,4 @@
-<h2>全商品検索</h2>
-<%= search_form_for @q, url: search_items_path do |f| %>
+<%= search_form_for @q, url: search_items_path, class: 'search-form hidden', id: 'item-search-form' do |f| %>
   <%= f.label :name_or_shop_name_i_cont, 'キーワード検索' %>
   <%= f.search_field :name_or_shop_name_i_cont %>
   <br>
