--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -8,20 +8,27 @@
 
 .owner-user-login {
   display: flex;
-  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: flex-end;  
+}
+
+.name { 
+  width: 6vw;
+  font-size: 1.1em;
+  margin: 0px 5px;
 }
 
 .log-in {
-  width: 140px;
-  height: 40px;
+  width: 9vw;
+  height: 5vh;
+  margin: 0px 2px 0px 6px;
   border-width: 4px;
   border-style: solid;
-  margin: 0px 5px;
   display: table;
 }
 
 .log-in-text {
-  font-size: 14px;
+  font-size: 0.9em;
   display: table-cell;
   vertical-align: middle;
   text-align: center;
