--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -21,12 +21,12 @@
     <div class='top-search' id='top-page-search'>
     商品検索
     </div>
-    <%= render "shared/search" %>
+    <%= render "shared/top_search" %>
 
-    <div class='top-shop' id='top-shops'>
+    <div class='top-shop' id='shops'>
     shop一覧
     </div>
-    <ul class='shop-list hidden' id='top-shop-list'>
+    <ul class='shop-list hidden' id='shop-list'>
     <% if @shops.present? %>
       <% @shops.each do |shop| %>
         <li>
