--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -13,9 +13,15 @@
 }
 
 .name { 
-  width: 6vw;
-  font-size: 1.1em;
+  width: 20vw;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
   margin: 0px 5px;
+}
+
+.owner-user-name {
+  font-size: 1.1em;
 }
 
 .log-in {
@@ -25,6 +31,7 @@
   border-width: 4px;
   border-style: solid;
   display: table;
+  text-decoration: none;
 }
 
 .log-in-text {
