--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,12 +2,16 @@
   <nav>
     <ul class='owner-user-login'>
         <% if owner_signed_in? %>
-          <li class='name'><%= link_to current_owner.account_name, owner_path(current_owner.id) %></li>
+          <li class='name'>
+            <%= link_to "#{current_owner.account_name}さん", owner_path(current_owner.id), class: 'owner-user-name' %>
+          </li>
           <%= link_to destroy_owner_session_path, method: :delete, class: 'log-in' do %>
             <li class='log-in-text'> ログアウト</li>
           <% end %>
         <% elsif  user_signed_in?%>
-          <li class='name'><%= link_to current_user.nickname, "#" %></li> 
+          <li class='name'>
+            <%= link_to "#{current_user.nickname}さん", "#", class: 'owner-user-name' %>
+          </li> 
           <%= link_to destroy_user_session_path, method: :delete, class: "log-in" do %> 
             <li class='log-in-text'>ログアウト</li>
           <% end %>
