--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -1,21 +1,19 @@
 <%= render "shared/header" %>
 
 <div class='top-title'>
-  <h1 class='title'>
-  <%= link_to 'KGY -KaGuYa-', root_path %>
-  </h1>
+  <%= link_to 'KGY -KaGuYa-', root_path, class: 'title' %>
 </div>
 
 <div class='top-main'>
-  <%= image_tag 'desk_1.jpg', alt: 'desk画像', class: 'left_one_top' %>
+  <%= image_tag 'desk_5.jpeg', alt: 'Desk画像', class: 'left_one_top' %>
 
-  <%= image_tag 'chair_1.jpg', alt: 'chair画像', class: 'left_two_top' %>
+  <%= image_tag 'flower_vase_1.jpeg', alt: 'Flower Vase画像', class: 'left_two_top' %>
 
-  <%= image_tag 'sofa_1.jpg', alt: 'sofa画像', class: 'left_bottom' %>
+  <%= image_tag 'sofa_1.jpeg', alt: 'Sofa画像', class: 'left_bottom' %>
 
-  <%= image_tag 'bed_1.jpg', alt: 'bed画像', class: 'right-top' %>
+  <%= image_tag 'chair_2.jpeg', alt: 'Chair画像', class: 'right-top' %>
 
-  <%= image_tag 'lighting_1.jpg', alt: 'lighting画像', class: 'right-bottom' %>
+  <%= image_tag 'bed_13.jpeg', alt: 'Bed画像', class: 'right-bottom' %>
 
   <div class='top-info'>
     <div class='top-search' id='top-page-search'>
