商品検索結果一覧表示フロント実装

--- a/app/assets/stylesheets/items/index.css
+++ b/app/assets/stylesheets/items/index.css
@@ -46,11 +46,11 @@
   padding: 1vw;
 }
 
-.shop-item {
+.list-item {
   text-decoration: none;
 }
 
-.shop-item-img {
+.list-item-img {
   width: 35vh;
   height: 32vh;
 }
