--- a/app/views/owners/registrations/new.html.erb
+++ b/app/views/owners/registrations/new.html.erb
@@ -1,133 +1,131 @@
-<h2>オーナー登録</h2>
+<div class='registration-background'>
+  <%= render "shared/title_header" %>
 
-<%= form_with model: @owner, url: owner_registration_path, local: true do |f| %>
-  <%= render "shared/error_messages", model: f.object %>
+  <%= form_with model: @owner, url: owner_registration_path, class: 'registration-main', local: true do |f| %>
+  <div class='registration-form'>
+    <div class='registration-form-header'>
+      <h2 class='form-title'>オーナー登録</h2>
+    </div>
 
-  <div class="field">
-    <div>
-      <label>アカウントネーム</label>
-      <span>必須</span>
-    </div>
-    <%= f.text_area :account_name, placeholder:"例）Kagu太 " %>
-  </div>
-  <div class="field">
-    <div>
-      <label>メールアドレス</label>
-      <span>必須</span>
-    </div>
-    <%= f.email_field :email, placeholder:"PC・携帯どちらでも可", autofocus: true %>
-  </div>
-  <div class="field">
-    <div>
-      <label>パスワード</label>
-      <span>必須</span>
-    </div>
-    <%= f.password_field :password, placeholder:"6文字以上の半角英数字" %>
-    <p>※英字、数字、どちらも必要です</p>
-  </div>
-  <div class="field">
-    <div>
-      <label>パスワード(確認用)</label>
-      <span>必須</span>
-    </div>
-    <%= f.password_field :password_confirmation, placeholder:"同じパスワードを入力" %>
-  </div>
+    <%= render "shared/error_messages", model: f.object %>
 
-  <h3>オーナー情報登録</h3>
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>アカウントネーム</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <%= f.text_area :account_name, class:"input-default", placeholder:"例）Kagu太 " %>
+    </div>
+    <div class="form-group">
+      <div class='form-text-group'> 
+        <label class='form-text'>メールアドレス</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <%= f.email_field :email, class:"input-default", placeholder:"PC・携帯どちらでも可", autofocus: true %>
+    </div>
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>パスワード</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <%= f.password_field :password, class:"input-default", placeholder:"6文字以上の半角英数字" %>
+      <p>※英字、数字、どちらも必要です</p>
+    </div>
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>パスワード(確認用)</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <%= f.password_field :password_confirmation, class:"input-default", placeholder:"同じパスワードを入力" %>
+    </div>
 
-  <div>
-    <div>
-      <label>お名前(全角)</label>
-      <span>必須</span>
-    </div>
-    <div>
-      <%= f.text_area :last_name, placeholder:"例) 佐藤" %>
-      <%= f.text_area :first_name, placeholder:"例) かぐ太" %>
-    </div>
-  </div>
-  <div>
-    <div>
-      <label>お名前カナ(全角)</label>
-      <span>必須</span>
-    </div>
-    <div>
-      <%= f.text_area :last_name_kana, placeholder:"例) サトウ" %>
-      <%= f.text_area :first_name_kana, placeholder:"例) カグタ" %>
-    </div>
-  </div>
-  <div>
-    <div>
-      <label>郵便番号</label>
-      <span>必須</span>
-    </div>
-    <div>
-      <%= f.text_field :postal_code, placeholder:"例) 123-4567" %>
-    </div>
-  </div>
-  <div>
-    <div>
-      <label>都道府県</label>
-      <span>必須</span>
-    </div>
-    <div>
-      <%= f.collection_select(:state_province_id, StateProvince.all, :id, :name, {}, {}) %>
-    </div>
-  </div>
-  <div>
-    <div>
-      <label>市区町村</label>
-      <span>必須</span>
-    </div>
-    <div>
-      <%= f.text_field :city, placeholder:"例) 札幌市中央区" %>
-    </div>
-  </div>
-  <div>
-    <div>
-      <label>番地</label>
-      <span>必須</span>
-    </div>
-    <div>
-      <%= f.text_field :address_line_1, placeholder:"例) 南1-2-3" %>
-    </div>
-  </div>
-  <div>
-    <div>
-      <label>建物名</label>
-      <span>任意</span>
-    </div>
-    <div>
-      <%= f.text_field :address_line_2, placeholder:"例) 北斗ビル202" %>
-    </div>
-  </div>  
-  <div>
-    <div>
-      <label>電話番号</label>
-      <span>必須</span>
-    </div>
-    <div>
-      <%= f.text_field :phone_number, placeholder:"例) 08011112222", maxlength:"11" %>
-    </div>
-  </div>
-<div>
-    <div>
-      <label>生年月日</label>
-      <span>必須</span>
-    </div>
-    <div>
-      <%= raw sprintf(
-                  f.date_select(
-                    :birthday,
-                    use_month_numbers: true,
-                    prompt:'--',
-                    start_year: 1930,
-                    end_year: (Time.now.year - 10),
-                    date_separator: '%s'),
-                  "年", "月") + "日" %>
-    </div>
-  </div>
+    <p class='form-owner-info'>オーナー情報登録</p>
 
-  <div class="actions">
-    <%= f.submit "登録する" %>
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>お名前(全角)</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <div class='input-name-group'>
+        <%= f.text_area :last_name, class:"input-name", placeholder:"例) 佐藤" %>
+        <%= f.text_area :first_name, class:"input-name", placeholder:"例) かぐ太" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>お名前カナ(全角)</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <div class='input-name-group'>
+        <%= f.text_area :last_name_kana, class:"input-name", placeholder:"例) サトウ" %>
+        <%= f.text_area :first_name_kana, class:"input-name", placeholder:"例) カグタ" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>郵便番号</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <%= f.text_field :postal_code, class:"input-default", placeholder:"例) 123-4567" %>
+    </div>
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>都道府県</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <div class='input-prefecture'>
+        <%= f.collection_select(:state_province_id, StateProvince.all, :id, :name, {}, {class:"select-box"}) %>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>市区町村</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <%= f.text_field :city, class:"input-default", placeholder:"例) 札幌市中央区" %>
+    </div>
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>番地</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <%= f.text_field :address_line_1, class:"input-default", placeholder:"例) 南1-2-3" %>
+    </div>
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>建物名</label>
+        <span class='indispensable'>任意</span>
+      </div>
+      <%= f.text_field :address_line_2, class:"input-default", placeholder:"例) 北斗ビル202" %>
+    </div>  
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>電話番号</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <%= f.text_field :phone_number, class:"input-default", placeholder:"例) 08011112222", maxlength:"11" %>
+    </div>
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>生年月日</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <div class='input-birth'>
+        <%= raw sprintf(
+                    f.date_select(
+                      :birthday,
+                      use_month_numbers: true,
+                      prompt:'--',
+                      start_year: 1930,
+                      end_year: (Time.now.year - 10),
+                      date_separator: '%s'),
+                    "年", "月") + "日" %>
+      </div>
+    </div>
+
+    <div class="form-button">
+      <%= f.submit "登録する", class: 'registration-button' %>
+    </div>
   </div>
-<% end %>
+  <% end %>
+</div>
