--- a/app/assets/stylesheets/owners/new.scss
+++ b/app/assets/stylesheets/owners/new.scss
@@ -1,4 +1,4 @@
-.registration-background {
+.owner-registration-background {
   background-color: rgb(150, 151, 151);
   background-image: image-url("registration_13.jpeg");
   background-size: cover;
@@ -10,9 +10,9 @@
   justify-content: center;
 }
 
-.registration-form {
+.owner-registration-form {
   width: 45vw;
-  background-color:#e7e7e7;
+  background-color:#f5f5f5;
   border: none;
   border-radius: 25px;
   padding: 3%;
@@ -44,7 +44,7 @@
   font-weight: bold;
 }
 
-.input-default {
+.owner-input-default {
   width: 100%;
   margin-top: 2vh;
   height: 6vh;
@@ -70,7 +70,7 @@
   flex-wrap: wrap;
 }
 
-.input-name {
+.owner-input-name {
   width: 40%;
   margin: 2vh auto;
   height: 7vh;
@@ -86,7 +86,7 @@
   flex-wrap: wrap;
 }
 
-.select-box {
+.owner-select-box {
   width: 45%;
   margin-top: 2vh;
   height: 5vh;
@@ -98,13 +98,13 @@
   cursor: pointer;
 }
 
-.input-birth {
+.owner-input-birth {
   display: flex;
   flex-wrap: wrap;
   align-items: flex-end;
 }
 
-.input-birth select {
+.owner-input-birth select {
   width: 15%;
   margin-top: 2vh;
   height: 5vh;
@@ -123,8 +123,8 @@
 
 .registration-button {
   width: 100%;
-  background: #ea352d;
-  border: 1px solid #ea352d;
+  background: #c43333;
+  border: 1px solid #c43333;
   color: #fff;
   height: 7vh;
   font-size: 1em;
