--- a/app/views/owners/registrations/new.html.erb
+++ b/app/views/owners/registrations/new.html.erb
@@ -1,8 +1,8 @@
-<div class='registration-background'>
+<div class='owner-registration-background'>
   <%= render "shared/title_header" %>
 
   <%= form_with model: @owner, url: owner_registration_path, class: 'registration-main', local: true do |f| %>
-  <div class='registration-form'>
+  <div class='owner-registration-form'>
     <div class='registration-form-header'>
       <h2 class='form-title'>オーナー登録</h2>
     </div>
@@ -14,21 +14,21 @@
         <label class='form-text'>アカウントネーム</label>
         <span class='indispensable'>必須</span>
       </div>
-      <%= f.text_area :account_name, class:"input-default", placeholder:"例）Kagu太 " %>
+      <%= f.text_area :account_name, class:"owner-input-default", placeholder:"例）Kagu太 " %>
     </div>
     <div class="form-group">
       <div class='form-text-group'> 
         <label class='form-text'>メールアドレス</label>
         <span class='indispensable'>必須</span>
       </div>
-      <%= f.email_field :email, class:"input-default", placeholder:"PC・携帯どちらでも可", autofocus: true %>
+      <%= f.email_field :email, class:"owner-input-default", placeholder:"PC・携帯どちらでも可", autofocus: true %>
     </div>
     <div class="form-group">
       <div class='form-text-group'>
         <label class='form-text'>パスワード</label>
         <span class='indispensable'>必須</span>
       </div>
-      <%= f.password_field :password, class:"input-default", placeholder:"6文字以上の半角英数字" %>
+      <%= f.password_field :password, class:"owner-input-default", placeholder:"6文字以上の半角英数字" %>
       <p>※英字、数字、どちらも必要です</p>
     </div>
     <div class="form-group">
@@ -36,7 +36,7 @@
         <label class='form-text'>パスワード(確認用)</label>
         <span class='indispensable'>必須</span>
       </div>
-      <%= f.password_field :password_confirmation, class:"input-default", placeholder:"同じパスワードを入力" %>
+      <%= f.password_field :password_confirmation, class:"owner-input-default", placeholder:"同じパスワードを入力" %>
     </div>
 
     <p class='form-owner-info'>オーナー情報登録</p>
@@ -47,8 +47,8 @@
         <span class='indispensable'>必須</span>
       </div>
       <div class='input-name-group'>
-        <%= f.text_area :last_name, class:"input-name", placeholder:"例) 佐藤" %>
-        <%= f.text_area :first_name, class:"input-name", placeholder:"例) かぐ太" %>
+        <%= f.text_area :last_name, class:"owner-input-name", placeholder:"例) 佐藤" %>
+        <%= f.text_area :first_name, class:"owner-input-name", placeholder:"例) かぐ太" %>
       </div>
     </div>
     <div class="form-group">
@@ -57,8 +57,8 @@
         <span class='indispensable'>必須</span>
       </div>
       <div class='input-name-group'>
-        <%= f.text_area :last_name_kana, class:"input-name", placeholder:"例) サトウ" %>
-        <%= f.text_area :first_name_kana, class:"input-name", placeholder:"例) カグタ" %>
+        <%= f.text_area :last_name_kana, class:"owner-input-name", placeholder:"例) サトウ" %>
+        <%= f.text_area :first_name_kana, class:"owner-input-name", placeholder:"例) カグタ" %>
       </div>
     </div>
     <div class="form-group">
@@ -66,7 +66,7 @@
         <label class='form-text'>郵便番号</label>
         <span class='indispensable'>必須</span>
       </div>
-      <%= f.text_field :postal_code, class:"input-default", placeholder:"例) 123-4567" %>
+      <%= f.text_field :postal_code, class:"owner-input-default", placeholder:"例) 123-4567" %>
     </div>
     <div class="form-group">
       <div class='form-text-group'>
@@ -74,7 +74,7 @@
         <span class='indispensable'>必須</span>
       </div>
       <div class='input-prefecture'>
-        <%= f.collection_select(:state_province_id, StateProvince.all, :id, :name, {}, {class:"select-box"}) %>
+        <%= f.collection_select(:state_province_id, StateProvince.all, :id, :name, {}, {class:"owner-select-box"}) %>
       </div>
     </div>
     <div class="form-group">
@@ -82,35 +82,35 @@
         <label class='form-text'>市区町村</label>
         <span class='indispensable'>必須</span>
       </div>
-      <%= f.text_field :city, class:"input-default", placeholder:"例) 札幌市中央区" %>
+      <%= f.text_field :city, class:"owner-input-default", placeholder:"例) 札幌市中央区" %>
     </div>
     <div class="form-group">
       <div class='form-text-group'>
         <label class='form-text'>番地</label>
         <span class='indispensable'>必須</span>
       </div>
-      <%= f.text_field :address_line_1, class:"input-default", placeholder:"例) 南1-2-3" %>
+      <%= f.text_field :address_line_1, class:"owner-input-default", placeholder:"例) 南1-2-3" %>
     </div>
     <div class="form-group">
       <div class='form-text-group'>
         <label class='form-text'>建物名</label>
         <span class='indispensable'>任意</span>
       </div>
-      <%= f.text_field :address_line_2, class:"input-default", placeholder:"例) 北斗ビル202" %>
+      <%= f.text_field :address_line_2, class:"owner-input-default", placeholder:"例) 北斗ビル202" %>
     </div>  
     <div class="form-group">
       <div class='form-text-group'>
         <label class='form-text'>電話番号</label>
         <span class='indispensable'>必須</span>
       </div>
-      <%= f.text_field :phone_number, class:"input-default", placeholder:"例) 08011112222", maxlength:"11" %>
+      <%= f.text_field :phone_number, class:"owner-input-default", placeholder:"例) 08011112222", maxlength:"11" %>
     </div>
     <div class="form-group">
       <div class='form-text-group'>
         <label class='form-text'>生年月日</label>
         <span class='indispensable'>必須</span>
       </div>
-      <div class='input-birth'>
+      <div class='owner-input-birth'>
         <%= raw sprintf(
                     f.date_select(
                       :birthday,
