--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,89 +1,94 @@
-<h2>ユーザー登録</h2>
+<div class='user-registration-background'>
+  <%= render "shared/title_header" %>
 
-<%= form_with model: @user, url: user_registration_path, local: true do |f| %>
-  <%= render "shared/error_messages", model: f.object %>
+  <%= form_with model: @user, url: user_registration_path, class: 'registration-main', local: true do |f| %>
+  <div class='user-registration-form'>
+    <div class='registration-form-header'>
+      <h2 class='form-title'>ユーザー登録</h2>
+    </div>
 
-  <div class="field">
-    <div>
-      <label>ニックネーム</label>
-      <span>必須</span>
-    </div>
-    <%= f.text_area :nickname, placeholder:"例）Kagu太 " %>
-  </div>
-  <div class="field">
-    <div>
-      <label>メールアドレス</label>
-      <span>必須</span>
-    </div>
-    <%= f.email_field :email, placeholder:"PC・携帯どちらでも可", autofocus: true %>
-  </div>
-  <div class="field">
-    <div>
-      <label>パスワード</label>
-      <span>必須</span>
-    </div>
-    <%= f.password_field :password, placeholder:"6文字以上の半角英数字" %>
-    <p>※英字、数字、どちらも必要です</p>
-  </div>
-  <div class="field">
-    <div>
-      <label>パスワード(確認用)</label>
-      <span>必須</span>
-    </div>
-    <%= f.password_field :password_confirmation, placeholder:"同じパスワードを入力" %>
-  </div>
+    <%= render "shared/error_messages", model: f.object %>
 
-  <h3>ユーザー情報登録</h3>
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>ニックネーム</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <%= f.text_area :nickname, class:"user-input-default", placeholder:"例）Kagu太 " %>
+    </div>
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>メールアドレス</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <%= f.email_field :email, class:"user-input-default", placeholder:"PC・携帯どちらでも可", autofocus: true %>
+    </div>
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>パスワード</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <%= f.password_field :password, class:"user-input-default", placeholder:"6文字以上の半角英数字" %>
+      <p>※英字、数字、どちらも必要です</p>
+    </div>
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>パスワード(確認用)</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <%= f.password_field :password_confirmation, class:"user-input-default", placeholder:"同じパスワードを入力" %>
+    </div>
 
-  <div>
-    <div>
-      <label>お名前(全角)</label>
-      <span>必須</span>
-    </div>
-    <div class='input-name-wrap'>
-      <%= f.text_area :last_name, placeholder:"例) 佐藤" %>
-      <%= f.text_area :first_name, placeholder:"例) かぐ太" %>
-    </div>
-  </div>
-  <div>
-    <div>
-      <label>お名前カナ(全角)</label>
-      <span>必須</span>
-    </div>
-    <div>
-      <%= f.text_area :last_name_kana, placeholder:"例) サトウ" %>
-      <%= f.text_area :first_name_kana, placeholder:"例) カグタ" %>
-    </div>
-  </div>
-  <div>
-    <div>
-      <label>郵便番号</label>
-      <span>必須</span>
-    </div>
-    <div>
-      <%= f.text_field :postal_code, placeholder:"例) 123-4567" %>
-    </div>
-  </div>
+    <h3>ユーザー情報登録</h3>
 
-  <div>
-    <div>
-      <label>生年月日</label>
-      <span>必須</span>
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>お名前(全角)</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <div class='input-name-group'>
+        <%= f.text_area :last_name, class:"user-input-name", placeholder:"例) 佐藤" %>
+        <%= f.text_area :first_name, class:"user-input-name", placeholder:"例) かぐ太" %>
+      </div>
     </div>
-    <div>
-      <%= raw sprintf(
-                  f.date_select(
-                    :birthday,
-                    use_month_numbers: true,
-                    prompt:'--',
-                    start_year: 1930,
-                    end_year: (Time.now.year - 10),
-                    date_separator: '%s'),
-                  "年", "月") + "日" %>
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>お名前カナ(全角)</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <div class='input-name-group'>
+        <%= f.text_area :last_name_kana, class:"user-input-name", placeholder:"例) サトウ" %>
+        <%= f.text_area :first_name_kana, class:"user-input-name", placeholder:"例) カグタ" %>
+      </div>
     </div>
-  </div>
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>郵便番号</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <%= f.text_field :postal_code, class:"user-input-default", placeholder:"例) 123-4567" %>
+    </div>
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>生年月日</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <div class='user-input-birth'>
+        <%= raw sprintf(
+                    f.date_select(
+                      :birthday,
+                      use_month_numbers: true,
+                      prompt:'--',
+                      start_year: 1930,
+                      end_year: (Time.now.year - 10),
+                      date_separator: '%s'),
+                    "年", "月") + "日" %>
+      </div>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "登録する" %>
+    <div class="form-button">
+      <%= f.submit "登録する", class: 'registration-button' %>
+    </div>
   </div>
-<% end %>
+  <% end %>
+</div>
