--- a/app/assets/stylesheets/items/index.css
+++ b/app/assets/stylesheets/items/index.css
@@ -7,6 +7,8 @@
 
 .shop-name {
   font-size: 2.5em;
+  font-weight: bold;
+  color: #000;
   margin-left: 5vw;
   text-decoration: none;
 }
@@ -15,6 +17,7 @@
   width: 10vw;
   margin-left: 5vw;
   font-size: 1.3em;
+  color: #000;
   border-radius: 25px;
   border-width: 4px;
   border-style: solid;
@@ -48,6 +51,7 @@
 
 .list-item {
   text-decoration: none;
+  color: #000;
 }
 
 .list-item-img {
