--- a/app/assets/stylesheets/items/show.css
+++ b/app/assets/stylesheets/items/show.css
@@ -73,25 +73,28 @@
   align-content: center;
 }
 
-.edit-button {
+.edit-delete-button {
   width: 8vw;
-  height: 5vh;
+  height: 6vh;
   border: solid;
   border-radius: 100%;
   font-size: 1.5em;
   text-decoration: none;
   text-align: center;
+  padding: 3px 5px
+}
+
+.edit-button {
+  background-color: #4699ca;
+  border-color: #4699ca;
+  color: #fff;
 }
 
 .delete-button {
-  width: 8vw;
-  height: 5vh;
   margin-left: 3vw;
-  border: solid;
-  border-radius: 100%;
-  font-size: 1.5em;
-  text-decoration: none;
-  text-align: center;
+  background-color: #660000;
+  border-color: #660000;
+  color: #fff;
 }
 
 .user-buying {
@@ -100,7 +103,7 @@
 }
 
 .buying-button {
-  width: 6vw;
+  width: 7vw;
   height: 7vh;
   border: solid;
   border-radius: 100%;
@@ -109,7 +112,10 @@
   text-align: center;
   margin-left: 3vw;
   margin-top: 1.5vh;
-  padding: 2px 5px;
+  padding: 4px 5px;
+  background-color: #cc0000;
+  border-color: #cc0000;
+  color: #fff;
 }
 
 .info-size {
