--- a/app/assets/stylesheets/shops/index.css
+++ b/app/assets/stylesheets/shops/index.css
@@ -6,8 +6,9 @@
 }
 
 .title {
-  font-size: 1.3em;
-  font-weight: bolder;
+  font-size: 1.5em;
+  font-weight: bold;
+  color: #000;
   text-decoration: none;  
 }
 
