--- a/app/assets/stylesheets/shops/index.css
+++ b/app/assets/stylesheets/shops/index.css
@@ -1,5 +1,11 @@
+.top-page {
+  width: 100vw;
+  height: 90vh;
+}
+
 .top-title {
   height: 5vh;
+  width: 100vw;
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -13,6 +19,7 @@
 }
 
 .top-main {
+  width: 100vw;
   position: relative;
 }
 
@@ -20,42 +27,48 @@
   height: 22vh;
   width: 18.25vw;
   position: absolute;
-  margin: 2vh 5vw 7.5vh 6vw;
+  top: 2vh;
+  left: 6vw;
 }
 
 .left_two_top{
   height: 22vh;
   width: 18.25vw;
   position: absolute;
-  margin: 2vh 5vw 7.5vh 29.25vw;
+  top: 2vh;
+  left: 29.25vw;
 }
 
 .left_bottom{
   height: 51.5vh;
   width:  41.5vw;
   position: absolute;
-  margin: 30.5vh 5vw 4vh 6vw;
+  top: 30.5vh;
+  left: 6vw;
 }
 
 .right-top{
   height: 37vh;
   width: 41.5vw;
   position: absolute;
-  margin: 2vh 6vw 7.5vh 52.5vw;
+  top: 2vh;
+  left: 52.5vw;
 }
 
 .right-bottom{
   height: 36.5vh;
   width: 25vw;
   position: absolute;
-  margin: 45.5vh 5vw 4vh 52.5vw;
+  top: 45.5vh;
+  left: 52.5vw;
 }
 
 .top-info{
   position: absolute;
   height: 36.5vh;
   width: 11.5vw;
-  margin: 45.5vh 6vw 4vh 82.5vw;
+  top: 45.5vh;
+  left: 82.5vw;
   font-size: 1.5em;
 }
 
