--- a/app/assets/stylesheets/items/index.css
+++ b/app/assets/stylesheets/items/index.css
@@ -15,12 +15,13 @@
 
 .display{
   width: 10vw;
+  height: 5vh;
   margin-left: 5vw;
   font-size: 1.3em;
   color: #000;
+  background-color: #d2d200;
   border-radius: 25px;
-  border-width: 4px;
-  border-style: solid;
+  border: solid #d2d200;
   text-align: center;
   text-decoration: none;
 }
