--- a/app/assets/stylesheets/owners/new.scss
+++ b/app/assets/stylesheets/owners/new.scss
@@ -1,7 +1,10 @@
-.owner-registration-background {
+.registration-background {
   background-color: rgb(150, 151, 151);
-  background-image: image-url("registration_13.jpeg");
   background-size: cover;
+}
+
+.owner-registration-back {
+  background-image: image-url("registration_13.jpeg");
 }
 
 .registration-main {
@@ -10,13 +13,16 @@
   justify-content: center;
 }
 
-.owner-registration-form {
+.registration-form {
   width: 45vw;
-  background-color:#f5f5f5;
   border: none;
   border-radius: 25px;
   padding: 3%;
   overflow: scroll;
+}
+
+.owner-registration {
+  background-color:#f5f5f5;
 }
 
 .registration-form-header {
@@ -44,7 +50,7 @@
   font-weight: bold;
 }
 
-.owner-input-default {
+.input-default {
   width: 100%;
   margin-top: 2vh;
   height: 6vh;
@@ -56,7 +62,7 @@
   resize: none;
 }
 
-.form-owner-info {
+.form-middle-title {
   width: 100%;
   height: 4vh;
   font-size: 1.4em;
@@ -70,7 +76,7 @@
   flex-wrap: wrap;
 }
 
-.owner-input-name {
+.input-name {
   width: 40%;
   margin: 2vh auto;
   height: 7vh;
@@ -86,7 +92,7 @@
   flex-wrap: wrap;
 }
 
-.owner-select-box {
+.select-box {
   width: 45%;
   margin-top: 2vh;
   height: 5vh;
@@ -98,13 +104,13 @@
   cursor: pointer;
 }
 
-.owner-input-birth {
+.input-birth {
   display: flex;
   flex-wrap: wrap;
   align-items: flex-end;
 }
 
-.owner-input-birth select {
+.input-birth select {
   width: 15%;
   margin-top: 2vh;
   height: 5vh;
