--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,8 +1,8 @@
-<div class='user-registration-background'>
+<div class='registration-background user-registration-back'>
   <%= render "shared/title_header" %>
 
   <%= form_with model: @user, url: user_registration_path, class: 'registration-main', local: true do |f| %>
-  <div class='user-registration-form'>
+  <div class='registration-form user-registration'>
     <div class='registration-form-header'>
       <h2 class='form-title'>ユーザー登録</h2>
     </div>
@@ -14,21 +14,21 @@
         <label class='form-text'>ニックネーム</label>
         <span class='indispensable'>必須</span>
       </div>
-      <%= f.text_area :nickname, class:"user-input-default", placeholder:"例）Kagu太 " %>
+      <%= f.text_area :nickname, class:"input-default", placeholder:"例）Kagu太 " %>
     </div>
     <div class="form-group">
       <div class='form-text-group'>
         <label class='form-text'>メールアドレス</label>
         <span class='indispensable'>必須</span>
       </div>
-      <%= f.email_field :email, class:"user-input-default", placeholder:"PC・携帯どちらでも可", autofocus: true %>
+      <%= f.email_field :email, class:"input-default", placeholder:"PC・携帯どちらでも可", autofocus: true %>
     </div>
     <div class="form-group">
       <div class='form-text-group'>
         <label class='form-text'>パスワード</label>
         <span class='indispensable'>必須</span>
       </div>
-      <%= f.password_field :password, class:"user-input-default", placeholder:"6文字以上の半角英数字" %>
+      <%= f.password_field :password, class:"input-default", placeholder:"6文字以上の半角英数字" %>
       <p>※英字、数字、どちらも必要です</p>
     </div>
     <div class="form-group">
@@ -36,10 +36,10 @@
         <label class='form-text'>パスワード(確認用)</label>
         <span class='indispensable'>必須</span>
       </div>
-      <%= f.password_field :password_confirmation, class:"user-input-default", placeholder:"同じパスワードを入力" %>
+      <%= f.password_field :password_confirmation, class:"input-default", placeholder:"同じパスワードを入力" %>
     </div>
 
-    <h3>ユーザー情報登録</h3>
+    <p class='form-middle-title'>ユーザー情報登録</p>
 
     <div class="form-group">
       <div class='form-text-group'>
@@ -47,8 +47,8 @@
         <span class='indispensable'>必須</span>
       </div>
       <div class='input-name-group'>
-        <%= f.text_area :last_name, class:"user-input-name", placeholder:"例) 佐藤" %>
-        <%= f.text_area :first_name, class:"user-input-name", placeholder:"例) かぐ太" %>
+        <%= f.text_area :last_name, class:"input-name", placeholder:"例) 佐藤" %>
+        <%= f.text_area :first_name, class:"input-name", placeholder:"例) かぐ太" %>
       </div>
     </div>
     <div class="form-group">
@@ -57,8 +57,8 @@
         <span class='indispensable'>必須</span>
       </div>
       <div class='input-name-group'>
-        <%= f.text_area :last_name_kana, class:"user-input-name", placeholder:"例) サトウ" %>
-        <%= f.text_area :first_name_kana, class:"user-input-name", placeholder:"例) カグタ" %>
+        <%= f.text_area :last_name_kana, class:"input-name", placeholder:"例) サトウ" %>
+        <%= f.text_area :first_name_kana, class:"input-name", placeholder:"例) カグタ" %>
       </div>
     </div>
     <div class="form-group">
@@ -66,14 +66,14 @@
         <label class='form-text'>郵便番号</label>
         <span class='indispensable'>必須</span>
       </div>
-      <%= f.text_field :postal_code, class:"user-input-default", placeholder:"例) 123-4567" %>
+      <%= f.text_field :postal_code, class:"input-default", placeholder:"例) 123-4567" %>
     </div>
     <div class="form-group">
       <div class='form-text-group'>
         <label class='form-text'>生年月日</label>
         <span class='indispensable'>必須</span>
       </div>
-      <div class='user-input-birth'>
+      <div class='input-birth'>
         <%= raw sprintf(
                     f.date_select(
                       :birthday,
