ユーザー・オーナー新規登録フォームフロント修正

--- a/app/assets/stylesheets/owners/new.scss
+++ b/app/assets/stylesheets/owners/new.scss
@@ -1,20 +1,17 @@
-.registration-background {
-  background-color: rgb(150, 151, 151);
-  background-size: cover;
-}
 
 .owner-registration-back {
+  background-color: rgb(150, 151, 151);
   background-image: image-url("registration_13.jpeg");
 }
 
-.registration-main {
+.form-main {
   width: 100vw;
   display: flex;
   justify-content: center;
+  overflow: scroll;
 }
 
-.registration-form {
-  width: 45vw;
+.form {
   border: none;
   border-radius: 25px;
   padding: 3%;
@@ -22,10 +19,11 @@
 }
 
 .owner-registration {
+  width: 45vw;
   background-color:#f5f5f5;
 }
 
-.registration-form-header {
+.form-header {
   height: 6vh;
   font-size: 1.5em;
   text-align: center;
