--- a/app/assets/stylesheets/users/new.scss
+++ b/app/assets/stylesheets/users/new.scss
@@ -1,7 +1,9 @@
 .user-registration-back {
+  background-color: rgb(150, 151, 151);
   background-image: image-url("registration_10.jpeg");
 }
 
 .user-registration {
+  width: 45vw;
   background-color:rgb(216, 213, 209);
 }
