--- a/app/views/owners/registrations/new.html.erb
+++ b/app/views/owners/registrations/new.html.erb
@@ -1,9 +1,9 @@
-<div class='registration-background owner-registration-back'>
+<div class='form-background owner-registration-back'>
   <%= render "shared/title_header" %>
 
-  <%= form_with model: @owner, url: owner_registration_path, class: 'registration-main', local: true do |f| %>
-  <div class='registration-form owner-registration'>
-    <div class='registration-form-header'>
+  <%= form_with model: @owner, url: owner_registration_path, class: 'form-main', local: true do |f| %>
+  <div class='form owner-registration'>
+    <div class='form-header'>
       <h2 class='form-title'>オーナー登録</h2>
     </div>
 
