--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,9 +1,9 @@
-<div class='registration-background user-registration-back'>
+<div class='form-background user-registration-back'>
   <%= render "shared/title_header" %>
 
-  <%= form_with model: @user, url: user_registration_path, class: 'registration-main', local: true do |f| %>
-  <div class='registration-form user-registration'>
-    <div class='registration-form-header'>
+  <%= form_with model: @user, url: user_registration_path, class: 'form-main', local: true do |f| %>
+  <div class='form user-registration'>
+    <div class='form-header'>
       <h2 class='form-title'>ユーザー登録</h2>
     </div>
 
