--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -87,8 +87,8 @@
       </div>
     </div>
 
-    <div class='form-button'>
-      <%= form.submit "出品する", class: 'registration-button' %>
+    <div class="form-button">
+      <%= form.submit "出品する", class: 'submit-button item-registration-btn' %>
     </div>
   </div>
   <% end %>
