--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -27,10 +27,10 @@
     <div class='owner-edit'>
       <% if owner_signed_in? && current_owner == @shop.owner %>
         <%= link_to edit_shop_item_path(@shop.id, @item.id), class: 'edit-delete-button edit-button' do%>
-          編集
+          <p class='edit-delete-text'>編集</p>
         <% end %>
         <%= link_to shop_item_path(@shop.id, @item.id), method: :delete, class: 'edit-delete-button delete-button' do%>
-          削除
+          <p class='edit-delete-text'>削除</p>
         <% end %>
       <% end %>
     </div>
