--- a/app/views/owners/registrations/new.html.erb
+++ b/app/views/owners/registrations/new.html.erb
@@ -124,7 +124,7 @@
     </div>
 
     <div class="form-button">
-      <%= f.submit "登録する", class: 'registration-button' %>
+      <%= f.submit "登録する", class: 'submit-button owner-registration-btn' %>
     </div>
   </div>
   <% end %>
