--- a/app/assets/stylesheets/items/index.css
+++ b/app/assets/stylesheets/items/index.css
@@ -15,15 +15,21 @@
 
 .display{
   width: 10vw;
-  height: 5vh;
-  margin-left: 5vw;
-  font-size: 1.3em;
-  color: #000;
-  background-color: #d2d200;
-  border-radius: 25px;
-  border: solid #d2d200;
-  text-align: center;
+  height: 7vh;
+  display: table;
   text-decoration: none;
+  text-align: center;
+  color: #fff;
+  background-color: #000;
+  border: solid #cc0000 6px;
+  font-size: 1.3em;
+  text-decoration: none;
+  margin-left: 5vw;
+}
+
+.display-text {
+  display: table-cell;
+  vertical-align: middle;
 }
 
 .shop-info {
