--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -8,7 +8,7 @@
   <%=link_to @shop.name, shop_items_path(@shop.id), class: 'shop-name' %>
   <% if current_owner == @shop.owner %>
     <%= link_to new_shop_item_path, class: 'display' do%>
-      出品する
+      <p class='display-text'>出品する</p>
     <% end %>
   <% end %>
 </div>
