--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -87,7 +87,7 @@
     </div>
 
     <div class="form-button">
-      <%= f.submit "登録する", class: 'registration-button' %>
+      <%= f.submit "登録する", class: 'submit-button user-registration-btn' %>
     </div>
   </div>
   <% end %>
