商品編集ページフロント修正

--- a/app/assets/stylesheets/items/edit.scss
+++ b/app/assets/stylesheets/items/edit.scss
@@ -1,3 +1,13 @@
+.edit-item-back {
+  background-color: rgb(192, 192, 192);
+  background-image: image-url("registration_16.jpeg");
+}
+
+.item-edit {
+  width: 55vw;
+  background-color:#ececec;
+}
+
 .item-change-btn {
   border: 6px solid #4699ca;
 }
