--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,8 +1,8 @@
-<div class='form-background new-item-back'>
+<div class='form-background edit-item-back'>
   <%= render "shared/title_header" %>
 
   <%= form_with model: @item_category, url: shop_item_path(@shop.id, @item.id), class: 'form-main', local: true do |form| %>
-  <div class='form item-for-sale'>
+  <div class='form item-edit'>
     <div class='form-header'>
       <h2 class='form-title'><%= "#{@item.name}の編集" %></h2>
     </div>
