--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,3 +1,4 @@
 <div class='footer-title'>
-  <%= link_to "©︎KaGuYa,inc.", "#", class: 'footer-shop-name' %>
+  <%= link_to "©︎KaGuYa,inc.", "#", class: 'footer-text' %>
+  <%= link_to "全ての写真の画像転用元", 'https://pixabay.com/ja/', class: 'footer-text' %>
 </div>
